@@ -12,12 +12,12 @@
    <arg_order>110</arg_order>
    <arg_spot>C</arg_spot>
    <arg_substitution />
-   <arg_proto>&lt;&lt;/HWResolution[%s]&gt;&gt;setpagedevice\n</arg_proto>
+   <arg_proto>%s</arg_proto>
   </arg_execution>
   <constraints>
      <constraint sense="true">
       <driver>Postscript</driver>
-      <arg_defval>ev/Postscript-600</arg_defval>
+      <arg_defval>ev/Postscript-DefaultResolution</arg_defval>
      </constraint>
      <constraint sense="true">
       <make>HP</make>
@@ -217,6 +217,19 @@
      </constraint>
   </constraints>
   <enum_vals>
+   <enum_val id="ev/Postscript-DefaultResolution">
+    <ev_longname>
+     <en>Printer Default</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>default</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval></ev_driverval>
+   </enum_val>
    <enum_val id="ev/Postscript-600">
     <ev_longname>
      <en>600 DPI</en>
@@ -228,7 +241,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>600 600</ev_driverval>
+    <ev_driverval>&lt;&lt;/HWResolution[600 600]&gt;&gt;setpagedevice\n</ev_driverval>
     <constraints>
      <constraint sense="false">
       <make>Tektronix</make>
@@ -425,7 +438,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>300 300</ev_driverval>
+    <ev_driverval>&lt;&lt;/HWResolution[300 300]&gt;&gt;setpagedevice\n</ev_driverval>
    </enum_val>
    <enum_val id="ev/Postscript-150">
     <ev_longname>
@@ -438,7 +451,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>150 150</ev_driverval>
+    <ev_driverval>&lt;&lt;/HWResolution[150 150]&gt;&gt;setpagedevice\n</ev_driverval>
    </enum_val>
    <enum_val id="ev/Postscript-2400">
     <ev_longname>
@@ -451,7 +464,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>2400 2400</ev_driverval>
+    <ev_driverval>&lt;&lt;/HWResolution[2400 2400]&gt;&gt;setpagedevice\n</ev_driverval>
     <constraints>
      <constraint sense="true">
       <make>Generic</make>
@@ -480,7 +493,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>1200 1200</ev_driverval>
+    <ev_driverval>&lt;&lt;/HWResolution[1200 1200]&gt;&gt;setpagedevice\n</ev_driverval>
     <constraints>
      <constraint sense="false">
       <make>Minolta</make>
@@ -1241,7 +1254,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>1200 600</ev_driverval>
+    <ev_driverval>&lt;&lt;/HWResolution[1200 600]&gt;&gt;setpagedevice\n</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>Postscript</driver>
@@ -1315,7 +1328,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>2400 600</ev_driverval>
+    <ev_driverval>&lt;&lt;/HWResolution[2400 600]&gt;&gt;setpagedevice\n</ev_driverval>
     <constraints>
      <constraint sense="true">
       <make>Generic</make>
@@ -1349,7 +1362,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>2400 1200</ev_driverval>
+    <ev_driverval>&lt;&lt;/HWResolution[2400 1200]&gt;&gt;setpagedevice\n</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>Postscript</driver>
