@@ -1,3 +1,9 @@
+2003-03-05  Tim Waugh  <twaugh@redhat.com>
+
+	* db/source/opt/Postscript-Resolution.xml: New option 'Printer
+	  Default' for printers that balk at '/HWResolution'
+	  (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=85553).
+
 2003-03-05  Tim Waugh <twaugh@redhat.com>
 
 	* opt/162.xml: New option 'Not capable' for printers that balk at
